Update index.html with new home content and video autoplay

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Binary to Text Convetor</title>
 </head>
 <body>
-    <a href="/text2bin.html">Text to Binary</a>
-    <a href="/bin2text.html">Binary to Text</a>
+    <div class="home-content">
+        <h1>Binary To Text Convertor</h1>
+        <a href="/text2bin.html">Text to Binary</a>
+        <a href="/bin2text.html">Binary to Text</a>
+    </div>
+    <video src="src/video (2160p).mp4" autoplay loop ></video>
 </body>
+
 </html>
