Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="home-content">
-        <h1>Binary To Text Convertor</h1>
-        <a href="/text2bin.html">Text to Binary</a>
-        <a href="/bin2text.html">Binary to Text</a>
+        <h1 class="heading">Binary To Text Convertor</h1>   
+        <a href="/text2bin.html"><button class="btn">Text to Binary</button></a>
+        <a href="/bin2text.html"><button class="btn">Binary to Text</button></a>
     </div>
-    <video src="src/video (2160p).mp4" autoplay loop ></video>
+    <video src="src/video.mp4" autoplay loop ></video>
 </body>
 
 </html>
