--- a/text2bin.html
+++ b/text2bin.html
@@ -35,7 +35,7 @@
           <textarea id="result" class="form-control" readonly></textarea>
         </div>
         <!--Button to copy text to clipboard-->
-        <button type="button" class="btn btn-primary" id="copy">Copy</button>
+        <button type="button" style="background-color: green;" class="btn btn-primary" id="copy">Copy</button>
       </form>
     </div>
   </body>
