--- a/bin2text.html
+++ b/bin2text.html
@@ -44,7 +44,7 @@
                 </textarea>
             </div>
             <!--Button to copy text to clipboard-->
-            <button type="button" class="btn btn-primary" id="copy">Copy</button>
+            <button type="button" style="background-color: green;" class="btn btn-primary" id="copy">Copy</button>
 
         </form>
 
